image path change

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <div class="card">
         <div class="flex justify-center md:justify-end">
           <div class="common_class w-full md:w-[120px] h-[120px] flex items-center justify-center">
-            <img src="../Images/1.png" alt="1">
+            <img src="./Images/1.png" alt="1">
           </div>
         </div>
         <div class="common_class">
@@ -31,7 +31,7 @@
       <div class="card">
         <div class="w-full md:w-[450px] flex justify-center md:justify-end">
           <div class="common_class w-full md:w-[120px] h-[120px] flex items-center justify-center">
-            <img src="../Images/2.png" alt="2">
+            <img src="./Images/2.png" alt="2">
           </div>
         </div>
         <div class="common_class">
@@ -45,7 +45,7 @@
       <div class="card">
         <div class="w-full md:w-[650px] flex justify-center md:justify-end">
           <div class="common_class w-full md:w-[120px] h-[120px] flex items-center justify-center">
-            <img src="../Images/3.png" alt="3">
+            <img src="./Images/3.png" alt="3">
           </div>
         </div>
         <div class="common_class">
@@ -59,7 +59,7 @@
       <div class="card">
         <div class="w-full md:w-[450px] flex justify-center md:justify-end">
           <div class="common_class w-full md:w-[120px] h-[120px] flex items-center justify-center">
-            <img src="../Images/4.png" alt="4">
+            <img src="./Images/4.png" alt="4">
           </div>
         </div>
         <div class="common_class">
@@ -73,7 +73,7 @@
       <div class="card">
         <div class="flex justify-center md:justify-end">
           <div class="common_class w-full md:w-[120px] h-[120px] flex items-center justify-center">
-            <img src="../Images/5.png" alt="5">
+            <img src="./Images/5.png" alt="5">
           </div>
         </div>
         <div class="common_class">
